@startuml
skinparam monochrome true
skinparam ClassAttributeIconSize 0
!startsub default
class FileDownloadEventProducer {
    + <<override>> Notify(eventJson:System.Text.Json.JsonElement) : void
}
abstract class "WebBrowserEventProducer<T>" {
}
enum "EventLabel"
!endsub
"WebBrowserEventProducer<T>" "    <FileDownloadEvent>" <|-- FileDownloadEventProducer
FileDownloadEventProducer --> "HandledEventLabel" EventLabel
@enduml
